<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_operand">First Operand</string>
    <string name="second_operand">Second Operand</string>
    <string name="reset">RESET</string>
    <string name="result">Result</string>
    <string name="Minus">–</string>
    <string name="Plus">+</string>
</resources>